BTG version 2.0.0
-----------------
The following bugs were fixed:

015985 Merge patches from volkmar.

BTG version 1.0.0
-----------------
The following bugs were fixed:

015907 wwwBTG does not work with iExplorer.
015771 Refactor gzip interface (use zlib instead of boost).
015632 btgncli, add dialog showing totals for a session.
015626 btgncli, show files crashes client in certain situations.
015571 Merge wwwui patch from gH0StArthour (Hungarian translation).
015375 Wrong per-file progress info when several files are selected.
015216 Merge btgui patches from mkbosmans.
015185 btgncli, broken handling of updates.
015087 Add Arch Linux package to listing.
015074 context.peers does not work with "for all contexts" flag set.
015068 Crash when reading faulty IP filter range.
015049 Update Openwrt build.
015048 btgvs, add lirc support and freevo integration.
014512 Refactor daemon/resource (GPL vs BSD license).

BTG version 0.9.9
-----------------
The following bugs were fixed:

014834 btgncli, setting limits.
014794 Regression: short_open_tag=off.
014792 Popup warning when adding a URL to download.
014583 Possibility to allocate files.
014407 Show limits ranges in geometrical progression.
014372 Building issue (at configure step).
014371 Does not compile against boost 1.36.
014353 btgncli doc doesn't say what key configuration does.
014351 WAN annouce ip not used.
014308 btgui: infohash and announce_url in Details.
014305 Limits and sel.files persistance when move betw. sessions.
014280 btgncli, add sorting by..
014271 Typo in btg.js.
014268 Update Freebsd notes in howto.
014223 libsigc++-2.2.* is not supported.
013963 btgcli limit setting error.
013962 wwwUI response times optimization.
011275 Use UPnP support from libtorrent.

BTG version 0.9.8
-----------------
The following bugs were fixed:

014142 Compilation broke on curl link with --as-needed LDFLAG.
014067 BTG SVN fails to compile with SVN Libtorrent.
014061 XMLRPC_Client fails to parse some XMLs.