@@ -83,7 +83,7 @@ testrunner_LDADD   = $(top_builddir)/bcore/libbtgcore.la $(BCORE_CLIENT_TEST_LIB
                      $(top_builddir)/bcore/libbtgcore.la
 
 testrunner_LDFLAGS  = @LIBS@ $(CPPUNIT_LIBS) @LIBTORRENT_LIBS@ @BOOST_SYSTEM_LIB@ \
-                      @@ZLIB_LDFLAGS @BOOST_FILESYSTEM_LIB@ \
+                      @ZLIB_LDFLAGS@ @BOOST_FILESYSTEM_LIB@ \
                       @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ \
                       @LIBGNUTLS_LIBS@ @XMLRPC_LIBS@ $(URL_LIBS)
 
